EC2-MODULE/EC2.tf
resource "aws_instance" "ec2_instance" {

    ami = var.ami_id
    instance_type = var.instance_type
    key_name = var.key_name
    security_groups = [aws_security_group.ec2_default_sg.id]   
}


resource "aws_security_group" "ec2_default_sg" {

    vpc_id = data.aws_vpc.default.id
    name = "ec2_default_sg"

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
  
}
    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]

    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]


}
}



data "aws_vpc" "default" {
  default = true
}
